--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-devtools": "^6.0.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.1.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.0.0"
   },
