--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.0",
     "class-variance-authority": "^0.7.1",
     "lib-utils-ts": "^0.0.0-test",
     "react": "^18.3.1",
     "react-devtools": "^6.0.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router": "^7.1.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.0.0"
