--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.0",
+    "@tinymce/tinymce-react": "^5.1.1",
+    "appwrite": "^17.0.0",
     "class-variance-authority": "^0.7.1",
+    "html-react-parser": "^5.2.2",
     "lib-utils-ts": "^0.0.0-test",
     "react": "^18.3.1",
     "react-devtools": "^6.0.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.3",
     "tailwind-merge": "^2.6.0",
