--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "practice",
+  "name": "tech-blogs",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -23,6 +23,7 @@
     "react-devtools": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-loading-icons": "^1.1.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.3",
     "tailwind-merge": "^2.6.0",
@@ -38,8 +39,8 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.18.2",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.22.2",
     "vite": "^6.0.5"
   }
 }
