--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
+    "@eslint-react/eslint-plugin": "^1.26.2",
     "@eslint/js": "^9.17.0",
     "@types/node": "^22.10.10",
     "@types/react": "^18.3.18",
@@ -40,7 +41,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.22.2",
+    "typescript-eslint": "^8.24.0",
     "vite": "^6.0.5"
   }
 }
