--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "format": "prettier --ignore-path .gitignore --write \"src/**/*.{js,jsx,ts,tsx}\"" ,
     "preview": "vite preview",
     "test": "vitest"
   },
@@ -46,6 +47,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "jsdom": "^26.0.0",
+    "prettier": "3.5.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.2",
     "vite": "^6.0.5",
