--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "format": "prettier --ignore-path .gitignore --write \"src/**/*.{js,jsx,ts,tsx}\"" ,
+    "format": "prettier --ignore-path .gitignore --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@radix-ui/react-slider": "^1.2.2",
@@ -43,6 +44,7 @@
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
@@ -51,6 +53,12 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.2",
     "vite": "^6.0.5",
-    "vitest": "^3.0.5"
+    "vitest": "^3.0.5",
+    "husky": "^8.0.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "eslint-config-prettier"
+    ]
   }
 }
